[package]
authors = ["Robert <robert.balicki@gmail.com>"]
name = "hello-rocket"
version = "0.1.0"

[dependencies]
dotenv = "0.10.0"
error-chain = "0.10.0"
r2d2 = "0.7.3"
r2d2-diesel = "0.15.0"
rocket = "0.3.0"
rocket_codegen = "0.3.0"
rocket_contrib = "0.3.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dependencies.diesel]
features = ["postgres"]
version = "0.15"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.15"
